# packages/rest/src/routes/swagger.json
@@ -363,10 +363,7 @@
 				],
 				"type": "string"
 			},
-			"AgentMessage": {
-				"$ref": "#/components/schemas/Record_string.unknown_"
-			},
-			"Pick_CreateOutOfBandInvitationConfig.Exclude_keyofCreateOutOfBandInvitationConfig.routing-or-appendedAttachments__": {
+			"Pick_CreateOutOfBandInvitationConfig.Exclude_keyofCreateOutOfBandInvitationConfig.routing-or-appendedAttachments-or-messages__": {
 				"properties": {
 					"label": {
 						"type": "string"
@@ -392,12 +389,6 @@
 						},
 						"type": "array"
 					},
-					"messages": {
-						"items": {
-							"$ref": "#/components/schemas/AgentMessage"
-						},
-						"type": "array"
-					},
 					"multiUseInvitation": {
 						"type": "boolean"
 					},
@@ -408,8 +399,8 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_CreateOutOfBandInvitationConfig.routing-or-appendedAttachments_": {
-				"$ref": "#/components/schemas/Pick_CreateOutOfBandInvitationConfig.Exclude_keyofCreateOutOfBandInvitationConfig.routing-or-appendedAttachments__",
+			"Omit_CreateOutOfBandInvitationConfig.routing-or-appendedAttachments-or-messages_": {
+				"$ref": "#/components/schemas/Pick_CreateOutOfBandInvitationConfig.Exclude_keyofCreateOutOfBandInvitationConfig.routing-or-appendedAttachments-or-messages__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"Pick_CreateLegacyInvitationConfig.Exclude_keyofCreateLegacyInvitationConfig.routing__": {
@@ -436,6 +427,22 @@
 			"Omit_CreateLegacyInvitationConfig.routing_": {
 				"$ref": "#/components/schemas/Pick_CreateLegacyInvitationConfig.Exclude_keyofCreateLegacyInvitationConfig.routing__",
 				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"AgentMessageType": {
+				"properties": {
+					"@id": {
+						"type": "string"
+					},
+					"@type": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"@id",
+					"@type"
+				],
+				"type": "object",
+				"additionalProperties": {}
 			},
 			"OutOfBandDidCommService": {
 				"properties": {
@@ -3111,7 +3118,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_CreateOutOfBandInvitationConfig.routing-or-appendedAttachments_",
+								"$ref": "#/components/schemas/Omit_CreateOutOfBandInvitationConfig.routing-or-appendedAttachments-or-messages_",
 								"description": "configuration of how out-of-band invitation should be created"
 							}
 						}
@@ -3251,8 +3258,8 @@
 									"Example 1": {
 										"value": {
 											"message": {
-												"id": "eac4ff4e-b4fb-4c1d-aef3-b29c89d1cc00",
-												"type": "https://didcomm.org/connections/1.0/invitation"
+												"@id": "eac4ff4e-b4fb-4c1d-aef3-b29c89d1cc00",
+												"@type": "https://didcomm.org/connections/1.0/invitation"
 											},
 											"invitationUrl": "http://example.com/invitation_url"
 										}
@@ -3315,7 +3322,7 @@
 										"type": "string"
 									},
 									"message": {
-										"$ref": "#/components/schemas/AgentMessage"
+										"$ref": "#/components/schemas/AgentMessageType"
 									},
 									"recordId": {
 										"type": "string"
